reduce java requirement to 1.8